# qrun-to-pandas

./: LICENSE  README.md  flake.nix  pyproject.toml  test.py
.github/workflows/: pytest.yml
qrun_to_pandas/: __init__.py
sample_data/: 05-07-24_RPL27.Qrun
tests/: test_foo.py  test_qrun.py
